# ServiceMonitor

./: .env  .gitignore  docker-compose.yml  main.py  nginx.conf  pyproject.toml  readme.md  schemas.py  service.py  utils.py
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  exceptions.py  main.py  pyproject.toml  requirements.txt  service.py  utils.py
backend/db/: __init__.py  crud.py  database.py
backend/depends/: db_dp.py
backend/tests/: conftest.py  test_crud.py  test_endpoints.py  test_services.py
client/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.css  App.jsx  index.css
client/src/features/: AddDomainForm.jsx  AddDomainForm.test.jsx  DomainCard.jsx  DomainCard.test.jsx  DomainMonitor.jsx  DomainMonitor.test.jsx  Domains.jsx  DomainsList.jsx  DomainsList.test.jsx
db/: __init__.py  crud.py  database.py  models.py
depends/: db_dp.py
tests/: conftest.py  test_crud.py  test_endpoints.py  test_services.py
